--- a/files/supervisord.conf
+++ b/files/supervisord.conf
@@ -11,7 +11,7 @@ nodaemon=true
 logfile = /var/log/supervisor.log
 
 [program:gunicorn]
-command = gunicorn --access-logfile=/var/log/gunicorn/gunicorn.access.log --error-logfile=/var/log/gunicorn/gunicorn.error.log app:app
+command = gunicorn --access-logfile=/var/log/gunicorn/gunicorn.access.log --error-logfile=/var/log/gunicorn/gunicorn.error.log web:app
 stdout_logfile=/var/log/gunicorn/gunicorn.access.log
 autostart=true
 autorestart=true
